--- a/style.css
+++ b/style.css
@@ -298,6 +298,7 @@ body {
 }
 
 #footer a:hover {
-	color:#FFFFFF;
-	text-decoration:underline;
+	font-weight:bold;
+	color:#C63D0F;
+	text-shadow: 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black, 0 0 4px black;
 }
